Fixed text-align in message class

--- a/chat-ui/src/App.css
+++ b/chat-ui/src/App.css
@@ -26,6 +26,7 @@ header {
 }
 
 .bubble .message {
+  text-align: left;
   background-color: #2593ff;
   color: #fff;
   display: inline-block;
